# Mackie-of-the-Unicorn

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Jenkinsfile  Jenkinsfile-Windows  Jenkinsfile-macOS  LICENSE  README.md  di.h  main.cpp
assets/: icon.c
doc/: Doxyfile.in  doxygen-awesome-sidebar-only.css  licenses.md.in  main.md  user-manual.md
macos/Resources/: Icon.icns
src/: Application.cpp  Application.h  Constants.cpp.in  Constants.h  MIDIDevice.h  MIDIService.h  MackieComposite.h  MackieCompositeFactory.h  MackieDevice.h  MackieDeviceFactory.h  MackieService.h  MackieServiceImpl.cpp  MackieServiceImpl.h  StateMachine.h  di.h  git_version.h.in  main.cpp  precomp.h
src/Console/: main.cpp
src/Exceptions/: BuilderNotReadyException.h  DeviceUnavailableException.h  InvalidArgumentException.h
src/GUI/: Icon.cpp  Identifiers.h  LicensesWindow.cpp  LicensesWindow.h  MainApplication.cpp  MainApplication.h  MainWindow.cpp  MainWindow.h  main.cpp
src/HTTP/: ETagParser.cpp  ETagParser.h  HTTPDevice.h  HTTPDeviceImpl.cpp  HTTPDeviceImpl.h  HTTPListener.h
src/HTTP/Factories/: HTTPDeviceFactory.h  HTTPDeviceFactoryImpl.cpp  HTTPDeviceFactoryImpl.h
src/JSON/: JSONSerializer.cpp  JSONSerializer.h  JSONValue.cpp  JSONValue.h
src/LibraryAbstractions/Curl/: CurlAbstraction.h  CurlAbstractionImpl.cpp  CurlAbstractionImpl.h
src/LibraryAbstractions/Curl/Factories/: CurlAbstractionFactory.h  CurlAbstractionFactoryImpl.cpp  CurlAbstractionFactoryImpl.h
src/LibraryAbstractions/RtMidi/: RtMidiInAbstraction.h  RtMidiInAbstractionImpl.cpp  RtMidiInAbstractionImpl.h  RtMidiOutAbstraction.h  RtMidiOutAbstractionImpl.cpp  RtMidiOutAbstractionImpl.h
src/LibraryAbstractions/RtMidi/Factories/: RtMidiAbstractionFactory.h  RtMidiAbstractionFactoryImpl.cpp  RtMidiAbstractionFactoryImpl.h
src/MIDI/: MIDIDevice.h  MIDIDeviceImpl.cpp  MIDIDeviceImpl.h  MIDIReceiver.h  MIDIService.h  MIDIServiceImpl.cpp  MIDIServiceImpl.h
src/MIDI/Factories/: MIDIDeviceFactory.h  MIDIDeviceFactoryImpl.cpp  MIDIDeviceFactoryImpl.h
src/MOTU/: LabelBuffer.cpp  LabelBuffer.h  LabelCache.cpp  LabelCache.h
src/Mackie/: MackieComposite.h  MackieCompositeImpl.cpp  MackieCompositeImpl.h  MackieDevice.h  MackieDeviceImpl.cpp  MackieDeviceImpl.h  MackieInterface.h  MackieListener.h  MackieService.h  MackieServiceImpl.cpp  MackieServiceImpl.h
src/Mackie/Factories/: MackieCompositeFactory.h  MackieCompositeFactoryImpl.cpp  MackieCompositeFactoryImpl.h  MackieDeviceFactory.h  MackieDeviceFactoryImpl.cpp  MackieDeviceFactoryImpl.h
src/Mixers/: LinkedMixer.h  MOTUMixer.cpp  MOTUMixer.h  MackieMixer.cpp  MackieMixer.h  Mixer.h  VirtualMixer.cpp  VirtualMixer.h  VirtualMixerBuilder.cpp  VirtualMixerBuilder.h  VirtualMixerImpl.cpp  VirtualMixerImpl.h
src/Utilities/: FaderValueConverter.cpp  FaderValueConverter.h  ShortLabel.cpp  ShortLabel.h
src/Views/: ChannelView.cpp  ChannelView.h  MackieView.h  MackieViewData.h  MackieViewDataImpl.cpp  MackieViewDataImpl.h
test/: ApplicationTest.cpp  MIDIDeviceFake.h  MIDIServiceFake.h  MackieCompositeFactoryFake.h  MackieCompositeFake.h  MackieDeviceFactoryFake.h  MackieDeviceFake.h  MackieServiceFake.h  MackieServiceImplTest.cpp
test/fakes/HTTP/: HTTPDeviceFake.h  HTTPListenerFake.h
test/fakes/HTTP/Factories/: HTTPDeviceFactoryFake.h
test/fakes/LibraryAbstractions/: RtMidiInAbstractionFake.h  RtMidiOutAbstractionFake.h
test/fakes/LibraryAbstractions/Curl/: CurlAbstractionFake.h
test/fakes/LibraryAbstractions/Curl/Factories/: CurlAbstractionFactoryFake.h
test/fakes/LibraryAbstractions/RtMidi/: RtMidiInAbstractionFake.h  RtMidiOutAbstractionFake.h
test/fakes/LibraryAbstractions/RtMidi/Factories/: RtMidiAbstractionFactoryFake.h
test/fakes/MIDI/: MIDIDeviceFake.h  MIDIServiceFake.h
test/fakes/MIDI/Factories/: MIDIDeviceFactoryFake.h
test/fakes/Mackie/: MackieCompositeFake.h  MackieDeviceFake.h  MackieListenerFake.h  MackieServiceFake.h
test/fakes/Mackie/Factories/: MackieCompositeFactoryFake.h  MackieDeviceFactoryFake.h
test/fakes/Mixers/: LinkedMixerFake.h  VirtualMixerFake.h
test/fakes/REST/: RESTValue.h
test/integration/: ApplicationContainer.cpp  ApplicationContainer.h  ApplicationTest.cpp  ChannelBankTest.cpp  ChannelMutesTest.cpp  ChannelSolosTest.cpp
test/integration/Mackie/: MackieServiceImplTest.cpp
test/unit/: ApplicationTest.cpp
test/unit/HTTP/: ETagParserTest.cpp  HTTPDeviceImplTest.cpp
test/unit/HTTP/Factories/: HTTPDeviceFactoryImplTest.cpp
test/unit/JSON/: JSONSerializerTest.cpp
test/unit/LibraryAbstractions/Curl/Factories/: CurlAbstractionFactoryImplTest.cpp
test/unit/LibraryAbstractions/RtMidi/: RtMidiInAbstractionFakeTest.cpp  RtMidiOutAbstractionFakeTest.cpp
test/unit/MIDI/: MIDIDeviceImplTest.cpp  MIDIServiceImplTest.cpp
test/unit/MIDI/Factories/: MIDIDeviceFactoryImplTest.cpp
test/unit/Mackie/: MackieCompositeImplTest.cpp  MackieDeviceImplTest.cpp  MackieServiceImplTest.cpp
test/unit/Mackie/Factories/: MackieCompositeFactoryImplTest.cpp  MackieDeviceFactoryImplTest.cpp
test/unit/Mixers/: MOTUMixerTest.cpp  MackieMixerTest.cpp  VirtualMixerBuilderTest.cpp  VirtualMixerImplTest.cpp  VirtualMixerTest.cpp
test/unit/REST/: JSONSerializerTest.cpp
test/unit/Utilities/: FaderValueConverterTest.cpp  ShortLabelTest.cpp
windows/: resources.aps  resources.rc
